# skinner

./: Cargo.toml  LICENSE  README.md  skinner-sync.swift
.github/workflows/: build-bottles.yml
src/: main.rs
starter-pack/: skinner.conf
starter-pack/themes/myDarkTheme/: dark-tmux.conf  myDarkTheme-global.sh  myDarkTheme-per-shell.sh
starter-pack/themes/myLightTheme/: light-tmux.conf  myLightTheme-global.sh  myLightTheme-per-shell.sh
