[package]
name = "skinner"
version = "1.0.3"
edition = "2024"
authors = ["Malcom Mohamed <m@mal.com.de>"]
description = "Terminal theme manager with macOS dark mode sync"
license = "MIT"

[[bin]]
name = "skinner"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = {version = "0.11"}
log = {version = "0.4"}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shellexpand = "3.1"
